[tool.poetry]
name = "langchain-summary"
version = "0.1.0"
description = "langchain llama text summarizer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "langchain_summary"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "community"
langchain-community = "^0.0.20"
feedparser = "^6.0.11"
newspaper3k = "^0.2.8"
listparser = "^0.19"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
